[tool.poetry]
name = "blog-post-bentoml"
version = "0.0.1"
description = "Example code for blog post showcasing bentoml"
authors = ["Malte Büttner <malte.buettner@inovex.de>", "Nico Großkreuz <nico.grosskreuz@inovex.de"]
readme = "README.md"
packages = [
    { include = "code_completion", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.9"
bentoml = "1.0.20"
fastapi = "^0.93.0"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp39-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp39-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
]
transformers = "^4.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.21.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


[tool.flake8]
max-line-length = 119
exclude = ["migrations"]
max-complexity = 11
ignore = ["C901", "W503", "W504", "E203", "E722", "E501", "F811"]
